darkmode.css
/* ... */
@keyframes triggered {
  0% {
    transform: translate(0,0);
  }
  20% {
    transform: translate(2px,0);
  }
  40% {
    transform: translate(-2px,0);
  }
  60% {
    transform: translate(0,-2px);
  }
  80% {
    transform: translate(0,2px);
  }
  100% {
    transform: translate(0,0);
  }
}
@keyframes party {
  0% {
    filter: hue-rotate(0deg) saturate(3);
  }
  100% {
    filter: hue-rotate(360deg) saturate(3);
  }
}
@keyframes dabbin {
  0% {
    filter: blur(0px);
  }
  25% {
    filter: blur(0px);
    opacity: 1;
    transform: translateX(0);
  }
  100% {
    filter: blur(20px);
    opacity: 0;
    transform: translateX(10px);
  }
}
@keyframes godtier {
  0% {
    filter: contrast(1.5) saturate(1) brightness(1) drop-shadow(0px 0px 0px rgb(249, 207, 153));
  }
  50% {
    filter: contrast(2) saturate(1.25) brightness(1.5) drop-shadow(0px 0px 7px rgb(249, 207, 153));
  }
  100% {
    filter: contrast(1.5) saturate(1) brightness(1) drop-shadow(0px 0px 0px rgb(249, 207, 153));
  }
}

@keyframes slideX {
  0% {
    background-position-x: 0;
  }
  100% {
    background-position-x: 2em;
  }
}

@keyframes slideY {
  0% {
    background-position-y: 0;
  }
  100% {
    background-position-y: 2em;
  }
}


/* onboarding and tips */
#end_div {
  background: var(--background-darker) !important;
}
#end_display_msg_lim * {
  color: var(--text-main) !important;
}
#end_display_msg_lim a {
  color: var(--text-bright) !important;
  background: var(--background-lighter) !important;
}

.ReactModalPortal {
  background: var(--background-lighter) !important;
}

.p-message_pane__limited_history_foreword {
  background: var(--background-darker) !important;
  color: var(--text-header) !important;
}

/* threads */
#col_flex, #flex_contents .panel.active {
  background: #0c0b0a !important;
  border: none !important;
}
.tab_panels, .tab_container, .panel, .active {
  border: none !important;
}
.heading, .p-flexpane_header {
  background: var(--background-darker) !important;
  border: none !important;
  color: var(--text-header);
}

#threads_msgs, #threads_msgs_scroller_div, .message_container_item {
  background: var(--background-dark) !important;
}
.p-threads_footer__input .p-message_input_field, .p-threads_footer__input--legacy .p-message_input_plus {
  background: var(--background);
}


.day_container {
  margin-bottom: -4em !important;
}
.unread_group {
  /* margin-top: -2em; */
}
.unread_group_header {
  margin-bottom: -1.5em !important;
}
.unread_group_header, .unread_group_header_name a {
  background: var(--background-darker) !important;
  color: var(--text-header) !important;
  border: none !important;
}

.view_all_replies_container {
  background: var(--background-darker) !important;
}

.divider_line {
  border-color: var(--background-bright) !important;
  position: relative !important;
  top: -.75em !important;
}
.thread_channel_name a{
  color: var(--text-header) !important;
}

.thread_messages {
  border: none !important;
}

.thread_messages .btn_unstyle {
  color: var(--text-header) !important;
  background: var(--background) !important;
  /* width: 3em !important; */
}

.upload_in_threads .message_input {
  margin-left: 3em !important;
}

.upload_in_threads .inline_message_input_container{
  border: none !important;
  background: none !important;
}

.c-message__reply_bar:hover {
  background-color: var(--background-lighter) !important;
}

.c-message__reply_bar_view_thread {
  background: none !important;
}

/* .rxn_panel .btn_unstyle {
  border: none !important;
  background: var(--background-dark) !important;
  width: 5em !important;
  height: 5em;
  padding: 1em;
}

.rxn_panel .btn_unstyle .emoji {
  width: 3em;
  height: 3em;
} */

/* reactions */
.c-reaction, .c-reaction_add {
  background: var(--background);
  border-color: var(--accent-darker);
}

